MDEV-8745: Bad InnoDB logging: "[Note] InnoDB: not started"