storage/xtradb/buf/buf0dump.cc
@@ -590,8 +590,8 @@ DECLARE_THREAD(buf_dump_thread)(
 
 	srv_buf_dump_thread_active = TRUE;
 
-	buf_dump_status(STATUS_INFO, "not started");
-	buf_load_status(STATUS_INFO, "not started");
+	buf_dump_status(STATUS_INFO, "Dumping buffer pool(s) not yet started");
+	buf_load_status(STATUS_INFO, "Loading buffer pool(s) not yet started");
 
 	if (srv_buffer_pool_load_at_startup) {
 		buf_load();
